User account refactoring, initialization via SQL

--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -17,6 +17,12 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#" th:href="@{/}">Home</a></li>
+                <li th:if="${#authorization.expression('isAuthenticated()')}">
+                	<a href="#transfer">Transfer Money</a>
+                </li>
+                <li th:if="${#authorization.expression('isAuthenticated()')}">
+                	<a href="#history">Account History</a>
+                </li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
