--- a/src/main/webapp/WEB-INF/views/home/homeNotSignedIn.html
+++ b/src/main/webapp/WEB-INF/views/home/homeNotSignedIn.html
@@ -14,14 +14,14 @@
     <div class="text-center">
         <h1>Test</h1>
         <p class="lead">
-            Welcome to the Spring MVC Quickstart application!
+            Welcome to my Online Banking Application!
             Get started quickly by signing up.
         </p>
         <p>
             <a href="/signup" th:href="@{/signup}" class="btn btn-success btn-lg">Sign up</a>
         </p>
     </div>
-    <div th:replace="fragments/footer :: footer">&copy; 2013 The Static Templates</div>
+    <div th:replace="fragments/footer :: footer">&copy; 2015 Zoltan Isaszegi</div>
 </div>
 </body>
 </html>
