--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Demo project</a>
+            <a class="navbar-brand" href="#">Online Banking project</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -23,8 +23,6 @@
                 <li th:if="${#authorization.expression('isAuthenticated()')}">
                 	<a href="#history">Account History</a>
                 </li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li th:if="${#authorization.expression('!isAuthenticated()')}">
