--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -18,7 +18,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#" th:href="@{/}">Home</a></li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}">
-                	<a href="#transfer">Transfer Money</a>
+                	<a href="/transfermoney">Transfer Money</a>
                 </li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}">
                 	<a href="#history">Account History</a>
